# taskbar

./: package-lock.json  package.json  page_files.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs  watchdog.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/windows/: audio.rs  display.rs  input.rs  listener.rs  media.rs  mod.rs  network.rs  pins.rs  power.rs  radios.rs  taskbar.rs
src-tauri/target-test/: .rustc_info.json
src-tauri/target-test/debug/.fingerprint/aho-corasick-0b33b19871ac7fed/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-test/debug/.fingerprint/alloc-no-stdlib-44eaeb1e7d756483/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-test/debug/.fingerprint/alloc-stdlib-4a9a777db5598d50/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-test/debug/.fingerprint/anyhow-3f9e8d1f3189f86e/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-test/debug/.fingerprint/anyhow-b8e9bad9f8d8e757/: lib-anyhow  lib-anyhow.json
src-tauri/target-test/debug/.fingerprint/anyhow-f300711b3bb85343/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-test/debug/.fingerprint/autocfg-b67444436f3339ac/: lib-autocfg  lib-autocfg.json
src-tauri/target-test/debug/.fingerprint/bitflags-a9577a9bda3ea957/: lib-bitflags  lib-bitflags.json
src-tauri/target-test/debug/.fingerprint/brotli-5596d875f4922fab/: output-lib-brotli
src-tauri/target-test/debug/.fingerprint/brotli-decompressor-c852e05568a53946/: lib-brotli_decompressor  lib-brotli_decompressor.json
src-tauri/target-test/debug/.fingerprint/byteorder-1752bf2d0d2ee99b/: lib-byteorder  lib-byteorder.json
src-tauri/target-test/debug/.fingerprint/bytes-b5d675dec218edd2/: lib-bytes  lib-bytes.json
src-tauri/target-test/debug/.fingerprint/camino-5ac6c9bff7e611df/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-test/debug/.fingerprint/camino-a6999f768b6eeba8/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-test/debug/.fingerprint/camino-ff0d0d7d38c99ed3/: lib-camino  lib-camino.json
src-tauri/target-test/debug/.fingerprint/cfb-45699fb1ea02e449/: lib-cfb  lib-cfb.json
src-tauri/target-test/debug/.fingerprint/cfg-if-02c1fcfa729b180b/: lib-cfg_if  lib-cfg_if.json
src-tauri/target-test/debug/.fingerprint/convert_case-441584b0fb9799f9/: lib-convert_case  lib-convert_case.json
src-tauri/target-test/debug/.fingerprint/crossbeam-utils-18a954b49e75fe60/: lib-crossbeam_utils  lib-crossbeam_utils.json
src-tauri/target-test/debug/.fingerprint/crossbeam-utils-d1af2a2f2c95bf4c/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-test/debug/.fingerprint/crossbeam-utils-f156f714be61a9f2/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-test/debug/.fingerprint/cssparser-macros-d0596338214630ee/: lib-cssparser_macros  lib-cssparser_macros.json
src-tauri/target-test/debug/.fingerprint/ctor-946f40b21f71aca4/: lib-ctor  lib-ctor.json
src-tauri/target-test/debug/.fingerprint/darling_core-67f52cd74ee12883/: lib-darling_core  lib-darling_core.json
src-tauri/target-test/debug/.fingerprint/derive_more-750aeb2a241c2b1a/: lib-derive_more  lib-derive_more.json
src-tauri/target-test/debug/.fingerprint/displaydoc-45b2d447b9af55d0/: lib-displaydoc  lib-displaydoc.json
src-tauri/target-test/debug/.fingerprint/dtoa-5da35076c5985be9/: lib-dtoa  lib-dtoa.json
src-tauri/target-test/debug/.fingerprint/dtoa-short-6fdc80164c308e61/: lib-dtoa_short  lib-dtoa_short.json
src-tauri/target-test/debug/.fingerprint/dunce-6a0eea10c1ec6d28/: lib-dunce  lib-dunce.json
(+320 files in other folders)
