[package]
name = "vibrant-dawn-taskbar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vibrant-dawn-taskbar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibrant_dawn_taskbar_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.2"
color-thief = "0.2"
image = "0.24.0"
base64 = "0.22.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { 
    version = "0.61.3", 
    features = [
        "Media_Control", 
        "Foundation", 
        "Storage_Streams",
        "Win32_System_Power",
        "Win32_System_Com",
        "Win32_Media_Audio",
        "Win32_Media_Audio_Endpoints",
        "Win32_UI_Shell",
        "Win32_UI_WindowsAndMessaging",
        "Win32_System_Threading",
        "Win32_System_ProcessStatus",
        "Win32_Storage_FileSystem",
        "Win32_System_Com_StructuredStorage",
        "Win32_Graphics_Gdi",
        "Win32_Graphics_Dwm",
        "Win32_UI_HiDpi"
    ] 
}

[[bin]]
name = "watchdog"
path = "src/bin/watchdog.rs"
