[package]
name = "vibrant-dawn-taskbar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vibrant-dawn-taskbar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_listener"
path = "src/platform/windows/test_listener.rs"

[[bin]]
name = "vibrant-dawn-taskbar"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibrant_dawn_taskbar_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-thief = "0.2"
image = "0.24.0"
base64 = "0.22.1"
dirs = "6.0"
chrono = "0.4"

# enigo solo en plataformas no-Windows (para soporte Linux futuro)
[target.'cfg(not(target_os = "windows"))'.dependencies]
enigo = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {
    version = "0.61.3",
    features = [
        "Media_Control",
        "Foundation",
        "Storage_Streams",
        "Win32_System_Power",
        "Win32_System_Com",
        "Win32_System_IO",
        "Win32_Media_Audio",
        "Win32_Media_Audio_Endpoints",
        "Win32_UI_Shell",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Input_KeyboardAndMouse",
        "Win32_System_Threading",
        "Win32_System_ProcessStatus",
        "Win32_Storage_FileSystem",
        "Win32_Security",
        "Win32_System_Com_StructuredStorage",
        "Win32_System_WinRT",
        "Win32_Graphics_Gdi",
        "Win32_Graphics_Dwm",
        "Win32_UI_HiDpi",
        "Networking_Connectivity",
        "Devices_Radios",
        "Foundation_Collections",
        "Devices_WiFi",
        "Devices_Enumeration",
        "Devices_Bluetooth",
        "UI_Notifications",
        "UI_Notifications_Management",
        "ApplicationModel"
    ]
}

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dev]
opt-level = 1
